@@ -1,3 +1,4 @@
+- Add Checkbox element
 - Fix multiple GUIs not working correctly
 - When specifiying X, Y position when rendering the main layout, will now update correctly
   and also not use the margin system for it internally anymore.
